--- a/Collector(Game).vcxproj.filters
+++ b/Collector(Game).vcxproj.filters
@@ -53,16 +53,16 @@
     <ClInclude Include="Cat.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="PetBase.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
     <ClInclude Include="Dog.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Исходные файлы</Filter>
     </ClInclude>
     <ClInclude Include="Fish.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Исходные файлы</Filter>
     </ClInclude>
     <ClInclude Include="Spider.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="PetBase.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
   </ItemGroup>
